atualizacao para ficar utilizavel em celular

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
     <div class="number">
       <i class="icone fas fa-minus blueMinus"></i>
       <p class="life-points bluePoint">20</p>
-      <i class="icone fas fa-plus bluePlus"></i>,
+      <i class="icone fas fa-plus bluePlus"></i>
     </div>
     <i class="heart fas fa-heart"></i>
   </div>
   <div class="imagem-container">
-    <img  src="assets/img/magic.png" alt="Imagem">
+    <img  src="assets/img/magic.png" alt="Imagem" id="img">
   </div>
   <div class=" square square-player2">
     <div class="number">
